--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.0",
-    "@angular/cdk": "^11.2.0",
+    "@angular/animations": "^11.2.10",
+    "@angular/cdk": "^11.2.9",
     "@angular/common": "^11.0.9",
     "@angular/compiler": "^11.0.9",
-    "@angular/core": "^11.0.9",
+    "@angular/core": "^11.2.10",
     "@angular/forms": "^11.0.9",
     "@angular/platform-browser": "^11.0.9",
     "@angular/platform-browser-dynamic": "^11.0.9",
     "@angular/router": "^11.0.9",
-    "@nebular/eva-icons": "^6.2.2",
-    "@nebular/theme": "^6.2.2",
+    "@nebular/eva-icons": "^7.0.0",
+    "@nebular/theme": "^7.0.0",
     "eva-icons": "^1.1.3",
-    "patch-package": "^6.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
@@ -26,11 +25,9 @@
     "build": "ng build",
     "docker": "docker stop angular-temp || true && docker rm angular-temp || true && docker build -t angular-temp . && docker rmi --force `docker images --filter dangling=true -q` && docker-compose up -d",
     "docker-ci": "docker stop angular-temp-ci || true && docker rm angular-temp-ci || true && docker build -t angular-temp-ci -f docker-ci/Dockerfile . && docker rmi --force `docker images --filter dangling=true -q` || true",
-    "patch-fix": "npx patch-package @nebular/theme && rm -rf ./node_modules && npm i",
     "test": "ng test --watch=false",
     "lint": "eslint --fix",
-    "e2e": "ng e2e",
-    "postinstall": "patch-package && ngcc"
+    "e2e": "ng e2e"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.7",
@@ -63,6 +60,6 @@
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "^4.0.7"
+    "typescript": "~4.0.7"
   }
 }
